--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.13.2",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
